# ee_website

./: .gitignore  README.md  _publish.yml  _quarto.yml  _quarto_custom.yaml  ee_website.Rproj  index.qmd  lectureslides.qmd  main.py  mockexams.qmd  notes.md  pyproject.toml  quarto_render.txt  tutorialanswers.qmd  tutorialslides.qmd
_site/: about.html  index.html  lectureslides.html  mockexams.html  robots.txt  search.json  sitemap.xml  tutorialanswers.html  tutorialslides.html
_site/syllabus/: syllabus.html
_site/tutorials/: tutorial8.html
lectures/lecture1/: lecture1.qmd
lectures/lecture2/: lecture2.qmd  styles.css
lectures/lecture3/: lecture3.qmd  styles.css
lectures/lecture4/: lecture4.qmd  styles.css
lectures/lecture5/: event_study.py  lecture5.abc  lecture5.qmd  theme.scss
lectures/lecture6/: lecture6.qmd  styles.css
lectures/lecture7/: explain_collinearity.qmd  lecture7.qmd  styles.css
lectures/lecture8/: lecture8.qmd  styles.css
lectures/lecture_iv/: lecture7.qmd
lectures/prerequisite/: cond_prob.py  prerequisite.qmd  styles.css
misc/: failure_of_condition_expectation.py
mockexam/: answers.qmd  questions.qmd
mockexam/endterm/: answers.qmd  questions.qmd
mockexam/midterm/: answers.qmd  questions.qmd
syllabus/: syllabus.Rmd
tutorial_solutions/: prerequisite_solutions.qmd  tutorial1_solutions.qmd  tutorial2_solutions.qmd  tutorial3_solutions.qmd  tutorial4_solutions.qmd  tutorial5_solutions.qmd  tutorial6_solutions.qmd  tutorial7_solutions.qmd  tutorial8_solutions.qmd
tutorials/datafiles/: ceosal1.csv  cigar.dta  jtrain.csv  (+3 more)
(+30 files in other folders)
