[project]
name = "ee-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "linearmodels>=6.1",
    "marginaleffects>=0.1.5",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "polars>=1.34.0",
    "py4etrics>=0.1.9",
    "pyarrow>=21.0.0",
    "pyfixest>=0.30.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]
